fix(components): hide overflowing SwirlImageGrid items

--- a/packages/swirl-components/src/components/swirl-image-grid-item/swirl-image-grid-item.css
+++ b/packages/swirl-components/src/components/swirl-image-grid-item/swirl-image-grid-item.css
@@ -16,6 +16,10 @@
       object-fit: cover;
     }
   }
+
+  &(:nth-child(n+5)) {
+    display: none;
+  }
 }
 
 .image-grid-item {
